More tests added.